<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eCalculo Demo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="back">Back</string>
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="name">Name : </string>
    <string name="nameHeading">Name </string>
    <string name="ok">OK</string>
    <string name="sn">S.N.</string>
    <string name="asOf">As Of </string>
    <string name="cancel">Cancel</string>
    <string name="action">Action</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="noDataAvailable">No data available</string>
    <string name="selectAccount">Please Select an Account to view Ledger.</string>
    <string name="drCr">Dr./Cr.</string>
    <string name="measurementUnit">Measurement Unit</string>
    <string name="dr">Dr: </string>
    <string name="cr">Cr: </string>
    <string name="difference">Difference:  </string>
    <string name="opening">Opening </string>
    <string name="zero">0.00</string>
    <string name="percent">%</string>
    <string name="userName">UserName</string>
    <string name="rememberMe">Remember Me</string>
    <string name="signIn">Sign In</string>
    <string name="login"> Login </string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="reset">Reset Password</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="accounts">All Accounts</string>
    <string name="account">Account</string>
    <string name="warehouse">Warehouse</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="dashboard">Dashboard</string>
    <string name="transaction">Transaction</string>
    <string name="report">Report</string>
    <string name="more">More</string>
    <string name="summary">Summary</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="salesQty">Sales Qty</string>
    <string name="wholesaleRate">Wholesale Rate</string>
    <string name="salesOrder">Sales Order</string>
    <string name="salesChallan">Sales Challan</string>
    <string name="salesInvoice">Sales Invoice</string>
    <string name="purchaseInvoice">Purchase Invoice</string>
    <string name="salesReturn">Sales Return/Credit Note</string>
    <string name="purchase">Purchase</string>
    <string name="purchaseRate">Purchase Rate</string>
    <string name="mrp">MRP</string>
    <string name="purchaseReturn">Purchase Return/Debit Note</string>
    <string name="accounting">Accounting</string>
    <string name="purchaseWithoutItems">Purchase w/o Items</string>
    <string name="salesWithoutItems">Sales w/o Items</string>
    <string name="debitWithoutItems">Debit Note w/o Items</string>
    <string name="creditWithoutItems">Credit Note w/o Items</string>
    <string name="receiptEntry">Receipt Entry</string>
    <string name="PaymentEntry">Payment Entry</string>
    <string name="withdrawEntry">Withdraw Entry</string>
    <string name="depositEntry">Deposit Entry</string>
    <string name="journalEntry">Journal Entry</string>
    <string name="journalBook">Journal Book</string>
    <string name="banking">Banking</string>
    <string name="cashWithdraw">Cash Withdraw</string>
    <string name="cashDeposit">Cash Deposit</string>
    <string name="bankTransfer">Bank Transfer</string>
    <string name="bankTransferDetails">Bank Transfer Details</string>
    <string name="invoice">Sales Invoice</string>
    <string name="view">View</string>
    <string name="entry">Entry</string>
    <string name="createInvoice">Invoice</string>
    <string name="createOrder">Order</string>
    <string name="createChallan">Challan</string>
    <string name="addPurchaseInvoice">Add Purchase Invoice</string>
    <string name="invoiceNo">Invoice No : </string>
    <string name="billNumber">Bill No : </string>
    <string name="billNumber1">Bill No </string>
    <string name="orderNumber">Order No </string>
    <string name="orderFrom">Order From </string>
    <string name="chalanFrom">Chalan From </string>
    <string name="chalanNumber">Chalan No :  </string>
    <string name="purchaseNo">Pur. No : </string>
    <string name="date">Date : </string>
    <string name="purchaseDate">Purchase : </string>
    <string name="dueDate">Due Date : </string>
    <string name="billDate">Bill Date : </string>
    <string name="purchaseBillDate">Bill Date </string>
    <string name="purchaseBillNumber">Purchase Bill Number</string>
    <string name="saleBillNumber">Sale Bill Number</string>
    <string name="billPurchaseDate">Purchase Bill Date </string>
    <string name="creditDays">Credit Days:  </string>
    <string name="purchaseOrderNumber">Order No : </string>
    <string name="narration">Narration</string>
    <string name="grandTotal">Grand Total</string>
    <string name="subTotal">Sub Total : </string>
    <string name="addItemService">Add Item/Service</string>
    <string name="party">Party</string>
    <string name="select">Select</string>
    <string name="salesTo">Sales To</string>
    <string name="item">Item</string>
    <string name="itemrequired">Item*</string>
    <string name="service">Service</string>
    <string name="itemName">Item Name</string>
    <string name="itemCode">Item Code/Alias</string>
    <string name="itemCode1">Item Code</string>
    <string name="stockDetails">Stock Info</string>
    <string name="addImg">Add Image</string>
    <string name="itemInfo">Item Info</string>
    <string name="addItemNService">Create Item/Service</string>
    <string name="openingStockQty">Opening Stock Qty</string>
    <string name="openingStockRate">Opening Stock Rate</string>
    <string name="openingStockValue">Opening Stock Value</string>
    <string name="criticalItem">Critical Item</string>
    <string name="minimumQty">Minimum Quantity</string>
    <string name="maximumQty">Maximum Quantity</string>
    <string name="reorderQty">Reorder Quantity</string>
    <string name="pricingDetail">Pricing Detail</string>
    <string name="purchasePrice">Purchase Price</string>
    <string name="salesPrice">Sales Price</string>
    <string name="item_service">Item/Service</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="panVat">PAN/VAT</string>
    <string name="pan">Pan No. : </string>
    <string name="taxAmount">Tax Amount</string>
    <string name="amount">Amount</string>
    <string name="chequeNo">Cheque Number</string>
    <string name="chequeDate">Cheque Date</string>
    <string name="productNService">Product/Service Name</string>
    <string name="rate2">Rate</string>
    <string name="salesType">Sales Type</string>
    <string name="priceValue">(Rate x Qty)</string>
    <string name="nonTaxableSubTotal">Non-Taxable Sub Total : </string>
    <string name="taxableSubTotal">Taxable Sub Total : </string>
    <string name="nonTaxableTotal">Non-Taxable Total : </string>
    <string name="taxableTotal">Taxable Total : </string>
    <string name="taxNDiscount">Tax &amp; Discounts</string>
    <string name="billedItem">Billed Item</string>
    <string name="salesReturnType">Sales Return Type</string>
    <string name="purchaseReturnType">Purchase Return Type</string>
    <string name="returnSales">Sales Return</string>
    <string name="returnPurchase">Purchase Return</string>
    <string name="returnSalesByBill">Sales Return By Bill</string>
    <string name="salesReturnHeader">Sales Return Invoice(Bill Wise)</string>
    <string name="salesReturnHeader1">Sales Return Invoice</string>
    <string name="closingBalance">Balance : </string>
    <string name="closingStock">Closing Stock</string>
    <string name="closingBalance1">Closing Balance</string>
    <string name="closingAmount">Closing Amount</string>
    <string name="cBalance">Closing Balance </string>
    <string name="taxType">Add Tax Type </string>
    <string name="taxName">Tax Rate Name </string>
    <string name="taxRate">Tax Rate </string>
    <string name="addUnit">Add Measurement Unit </string>
    <string name="unitName">Unit Name </string>
    <string name="unitShortName">Unit Short Name </string>
    <string name="voucherNumber">Voucher No. :  </string>
    <string name="addAccounts">Add Account</string>
    <string name="paymentMode">Payment Mode </string>
    <string name="createCustomer">Create Customer</string>
    <string name="createAccount">Create Account</string>
    <string name="createWarehouse">Create Warehouse</string>
    <string name="createIncome">Create Income</string>
    <string name="createExpenses">Create Expenses</string>
    <string name="createSupplier">Create Supplier</string>
    <string name="createBank">Create Bank</string>
    <string name="addItems">Add Items</string>
    <string name="addBank">Add Bank</string>
    <string name="addEntry">Add Entry</string>
    <string name="addBankEntry">Add Bank Entry</string>
    <string name="accountHead">Account Head </string>
    <string name="accountSubHead">Account Sub Head </string>
    <string name="accountName">Account Name </string>
    <string name="accountNature">Account Nature </string>
    <string name="bankName">Bank Name </string>
    <string name="paidAmount">Paid Amount </string>
    <string name="paidBy">Paid By : </string>
    <string name="paidTo">Paid To </string>
    <string name="debitAmount">Debit Amount </string>
    <string name="creditAmount">Credit Amount </string>
    <string name="returnPurchaseByBill">Purchase Return By Bill</string>
    <string name="purchaseReturnHeader">Purchase Return Invoice(Bill Wise)</string>
    <string name="purchaseReturnHeader1">Purchase Return Invoice</string>
    <string name="withdrawMode">Withdraw Mode </string>
    <string name="depositMode">Deposit Mode </string>
    <string name="purchaseBillNumbers">Purchase Bill Number </string>
    <string name="debitNote">Debit Note</string>
    <string name="creditNote">Credit Note</string>
    <string name="openingDetails">Opening Details</string>
    <string name="openingBalance">Opening Balance</string>
    <string name="supplierDetails">Supplier Details</string>
    <string name="bankDetails">Bank Details</string>
    <string name="customerDetails">Customer Details</string>
    <string name="contactPerson">Contact Person</string>
    <string name="telephoneNo">Telephone No</string>
    <string name="contactNumber">Contact Number</string>
    <string name="secondaryContactNumber">Secondary Contact</string>
    <string name="mobileNo">Mobile No</string>
    <string name="tpinType">TPIN Type</string>
    <string name="vatNo">VAT No</string>
    <string name="vat">VAT</string>
    <string name="itemGroup">Item Group</string>
    <string name="itemSubGroup">Item Sub Group</string>
    <string name="accountGroup">Account Group</string>
    <string name="accountLedger">Account Ledger</string>
    <string name="dateHint">date</string>
    <string name="dateHint1">Date</string>
    <string name="nepaliDate">Miti</string>
    <string name="store">Store</string>
    <string name="subTotal1">Sub Total</string>
    <string name="nonTaxable">Non-Taxable</string>
    <string name="taxable">Taxable</string>
    <string name="edit">Edit</string>
    <string name="total">Total</string>
    <string name="order_no">Order No</string>
    <string name="order_date">Order Date</string>
    <string name="status">Status</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="address">Address</string>
    <string name="code">Code</string>
</resources>