<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/almostWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sales_challan_view">

    <LinearLayout
        android:id="@+id/lLDateSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_3sdp">

            <LinearLayout
                android:id="@+id/lLDateFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="@color/textBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tVDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateHint"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/darkGray" />

            <LinearLayout
                android:id="@+id/lLDateTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@color/textBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tVDateTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateHint"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSearch"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="0.3"
                android:background="@drawable/bg_button"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_below="@id/lLDateSelection"
        android:background="@color/colorPrimary"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tVNepaliDate"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/nepaliDate"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVEngDate"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/dateHint1"
                android:textAlignment="center"
                android:textStyle="bold" />


            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVBillNumber"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/chalanNumber"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />


            <TextView
                android:id="@+id/tVCustomer"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/supplier"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVAddress"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/address"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVStore"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/store"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />


            <TextView
                android:id="@+id/tVSubTotal"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/subTotal1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVNonTaxable"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/nonTaxable"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVTaxable"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/taxable"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVVat"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/vat"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVTotal"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/total"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tVAction"
                android:layout_width="@dimen/_105sdp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/action"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVSalesChallan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cVBottomButtons"
        android:layout_below="@+id/scrollMain"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_5sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cVBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_3sdp"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tVCancelSalesInvoice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lLNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:visibility="visible"
        tools:ignore="UseCompoundDrawables"
        tools:visibility="visible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/no_data"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/noDataAvailable"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            tools:ignore="PrivateResource" />

    </LinearLayout>



</RelativeLayout>
