<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tVInfoName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tVEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/confirm_spinner_background"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/edit"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tVDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/confirm_spinner_background"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/delete"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tVCall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/confirm_spinner_background"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/call"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tVCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/confirm_spinner_background"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
