<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/product"
            android:textColor="@color/normal_text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/quantity"
            android:textColor="@color/normal_text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/product"
            app:layout_constraintEnd_toStartOf="@id/rate"
            app:layout_constraintStart_toEndOf="@+id/product"
            app:layout_constraintTop_toTopOf="@+id/product" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/rate"
            android:textColor="@color/normal_text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/quantity"
            app:layout_constraintEnd_toStartOf="@id/quantity_rate"
            app:layout_constraintStart_toEndOf="@+id/quantity"
            app:layout_constraintTop_toTopOf="@+id/quantity" />

        <TextView
            android:id="@+id/quantity_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/code"
            android:textColor="@color/normal_text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rate"
            app:layout_constraintTop_toTopOf="@+id/rate" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>